Update transition duration for theme switcher

--- a/src/styles/weather.scss
+++ b/src/styles/weather.scss
@@ -30,7 +30,7 @@
       border-radius: 15px;
       position: absolute;
       transform: translateX(-21px);
-      // transition-duration: 300ms;
+      transition-duration: 300ms;
     }
 
     &.dark {
